@@ -689,7 +689,7 @@ $(document).ready(function() {
 							<div id="notification" style="display: none;"></div>
 							<div class="bannercontent"></div>
 							<div id="copyright">
-									<p>&copy; 2012-2013 Domoticz | WWW: <a href="http://domoticz.com/">Domoticz.com</a></p>
+									<p>&copy; 2012-2014 Domoticz | WWW: <a href="http://domoticz.com/">Domoticz.com</a></p>
 							</div>
 					</div> <!-- /container -->
 		</div>
